--- a/frontend/src/styles/Home.module.scss
+++ b/frontend/src/styles/Home.module.scss
@@ -1,47 +1,47 @@
 .recordingButton {
-    display: block;
-    padding: 20px;
-    color: white;
-    font-size: 15px;
-    background-color: #4b2e83;
-    border: 0.5px solid white;
-    border-radius: 20px;
-    margin: 8px;
-    &:focus {
-       outline: none;
-    }
+  display: block;
+  padding: 20px;
+  color: white;
+  font-size: 15px;
+  background-color: #4b2e83;
+  border: 0.5px solid white;
+  border-radius: 20px;
+  margin: 8px;
+  &:focus {
+    outline: none;
+  }
 }
 
 .contentContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .innerContainer {
-    justify-content: center;
+  justify-content: center;
 }
 
 .webcam {
-    position: relative;
-    &::before {
-        z-index: 1000;
-        content: " ";
-        position: absolute;
-        top: 100px;
-        left: 150px;
-        right: 150px;
-        bottom: 200px;
-        border: 3px solid red;
-    }
+  position: relative;
+  &::before {
+    z-index: 1000;
+    content: ' ';
+    position: absolute;
+    top: 100px;
+    left: 150px;
+    right: 150px;
+    bottom: 200px;
+    border: 3px solid red;
+  }
 }
 
-.countdown{
-    font-size: 30px;
+.countdown {
+  font-size: 30px;
 }
 
 .homeContainer {
-    display: flex;
-    justify-content: center;
-    margin-top: 24px;
+  display: flex;
+  justify-content: center;
+  margin-top: 24px;
 }
